tests/neg/experimental-message-experimental-flag/Lib_1.scala
//> using options -experimental

def f() = ???
